[2.7] bpo-22851: Fix a segfault when accessing generator.gi_frame.f_restricted